<resources>
    <string name="app_name">Olora_beta</string>
    <string name="Home_Connect">연결</string>
    <string name="BlueOn">블루투스 켜기</string>
    <string name="Home_ReConnect">다시접속</string>
    <string name="Home_AnotherCode">다른 코드입력</string>
    <string name="Pop_Progress_1">같은 채널의 유저 탐색</string>
    <string name="Pop_Progress_2">약  </string>
    <string name="Pop_Progress_3">초가 소요됩니다</string>

    <string name="welcome_text">\n\n채팅을 하기 위해 OLora 단말기와 연결되어 있어야 합니다.\n\n사용법을 모르시겠다면 좌측 상단의 물음표를 눌러주세요</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_pupop_list_del">PupopListDel</string>
    <string name="title_activity_list_set">ListSet</string>
    <string name="title_activity_popup_progress">PopupProgress</string>

    <!--  BluetoothChat -->
    <string name="send">보내기</string>
    <string name="not_connected">연결이 안됨</string>
    <string name="bt_not_enabled_leaving">블루투스가 지원이 되지 않습니다!</string>
    <string name="title_connecting">연결 중...</string>
    <string name="title_connected_to">연결 됨 </string>
    <string name="title_not_connected">연결이 안됨</string>

    <!--  A_Tab1_BtDeviceList -->
    <string name="scanning">장치를 찾는 중..</string>
    <string name="select_device">장치를 선택하세요</string>
    <string name="none_paired">페어링 된 장치 없음</string>
    <string name="none_found">장치를 찾을 수 없습니다</string>
    <string name="title_paired_devices">페어링 된 장치</string>
    <string name="title_other_devices">연결 가능한 장치</string>
    <string name="button_scan">장치 찾기</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>

    <string name="public_message1_1">전체 대화 대화방은 </string>
    <string name="public_message1_2_P">비상연락망</string>
    <string name="public_message1_3"> 으로 사용되므로 </string>

    <string name="public_message2_1">가급적 </string>
    <string name="public_message2_2_P">친구목록->원하는 대화상대</string>
    <string name="public_message2_3"> 를 클릭하여</string>

    <string name="public_message3_1_P">개인 채팅방</string>
    <string name="public_message3_2">을 만들어 이용해주세요.</string>
    <string name="title_activity_a_manual">A_manual</string>
</resources>
