<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFA07A"
    android:orientation="vertical">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFDAB9"
        android:orientation="vertical"
        android:padding="10sp">

        <TextView
            android:id="@+id/public_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5sp"
            android:text=""
            android:textAlignment="center"
            android:textColor="#FF4500"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="10sp"
            android:paddingRight="10sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2sp"
                android:text="@string/public_message1_1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/primary1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2sp"
                android:textColor="#FF4500"
                android:text="@string/public_message1_2_P"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2sp"
                android:text="@string/public_message1_3"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2sp"
                android:text="@string/public_message2_1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/primary2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2sp"
                android:textColor="#FF4500"
                android:text="@string/public_message2_2_P"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2sp"
                android:text="@string/public_message2_3"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/primary3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2sp"
                android:textColor="#FF4500"
                android:text="@string/public_message3_1_P"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2sp"
                android:text="@string/public_message3_2"
                android:textAlignment="center"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/im1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ListView
                android:id="@+id/listView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cacheColorHint="#00000000"
                android:divider="#000000"
                android:listSelector="#00000000"
                android:transcriptMode="alwaysScroll" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/im2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFE4B5"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp">

        <RelativeLayout
            android:id="@+id/relative"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom">
            <TextView
                android:id="@+id/anotherch_alarm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="(다른 채널의 채팅방 입니다)"
                android:textSize="25dp"
                android:typeface="serif"
                android:visibility="gone"/>
            <EditText
                android:id="@+id/chatText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/chatSend"
                android:hint="메세지를 입력하세요"
                android:inputType="textMultiLine"
                android:maxLines="6"
                android:typeface="serif" />
            <!--TextView
                android:id="@+id/msgMax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/chatSend"
                android:text="(0/300) "
                android:layout_centerVertical="true"/-->

            <ImageButton
                android:id="@+id/chatSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:background="@drawable/sendbtn" />
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>