<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".Component_123_PopupProgress">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/progresstitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="@color/dialog_sub_color"
            android:maxLines="1"
            android:padding="20sp"
            android:text="@string/Pop_Progress_1"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="monospace" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"/>
            <TextView
                android:id="@+id/btConnectSeconds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"/>


        </RelativeLayout>
        <LinearLayout
            android:id="@+id/progLinear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text= "@string/Pop_Progress_2"
                android:textColor="@color/dialog_sub_color"
                android:textSize="15sp"
                android:typeface="monospace" />

            <TextView
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:id="@+id/discoverySec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="10"
                android:textColor="@color/dialog_sub_color"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Pop_Progress_3"
                android:textColor="@color/dialog_sub_color"
                android:textSize="15sp"
                android:typeface="monospace" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/progLinear2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/progBdaddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text=""
                android:textColor="@color/dialog_sub_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="연결 요청 중 입니다."
                android:textSize="15sp"
                android:typeface="monospace" />
        </LinearLayout>

        <Button
            android:id="@+id/nayoenBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="취소" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>